--- a/org-mode/org-mode-syntax.org
+++ b/org-mode/org-mode-syntax.org
@@ -3,13 +3,12 @@
 * 标题
 
 标题以星号(*)开头
-#+BEGIN_SRC org-mode
 
-* 一级标题
-** 二级标题
-*** 三级标题
-**** 四级标题
-***** 五级标题
-****** 六级标题
-
+#+BEGIN_SRC org
+  * 一级标题
+  ** 二级标题
+  *** 三级标题
+  **** 四级标题
+  ***** 五级标题
+  ****** 六级标题
 #+END_SRC
