--- a/org-mode/org-mode-syntax.org
+++ b/org-mode/org-mode-syntax.org
@@ -115,9 +115,9 @@
 
 #+BEGIN_SRC org
   #+NAME: name
-  #+BEGIN_SRC language 
+  \#+BEGIN_SRC language 
     <code>
-  #+END_SRC
+  \#+END_SRC
 #+END_SRC
 
 * 待办事项
