--- a/website/index.org
+++ b/website/index.org
@@ -17,6 +17,7 @@
 + [[https://golang.org/][Go]]
 + [[http://docscn.studygolang.com/][Go(中文)]]
 + [[http://php.net/][PHP]]
++ [[http://www.oracle.com/technetwork/java/javase/overview/index.html][Java]]
 
 ** 前端
 
@@ -51,6 +52,8 @@
 + [[https://www.jetbrains.com/pycharm/][PyCharm]]
 + [[https://www.genuitec.com/][Genuitec]]
 + [[https://www.genuitec.com/products/angular-ide/][Angular IDE]]
++ [[https://developer.android.google.cn/studio/index.html][Android Studio(CN)]]
++ [[http://www.eclipse.org/downloads/][eclipse]]
 
 *** 其他编辑器
 + [[https://tamlok.github.io/vnote/][VNote]]
@@ -63,10 +66,20 @@
 + [[https://github.com/posva/vim-vue][vim-vue(GitHub)]]
 + [[https://github.com/rakr/vim-one][vim-one colorschemes(GitHub)]]
 + [[https://github.com/altercation/vim-colors-solarized][vim-solarized colorschemes(GitHub)]]
++ [[http://vimcolors.com/][Vim Colors]]
 
 *** Emacs插件
-+ [[https://github.com/syl20bnr/spacemacs][spacemacs(GitHub)]]
 + [[https://orgmode.org/][org-mode]]
++ [[https://github.com/syl20bnr/spacemacs][spacemacs(GitHub)]]
 + [[https://github.com/dominikh/go-mode.el][go-model(GitHub)]]
 + [[https://github.com/fxbois/web-mode][web-mode(GitHub)]]
+
+** 普通文本标记语言
++ [[https://orgmode.org/][Org mode]]
++ [[https://orgmode.org/org.html][Org mode Manual]]
++ [[https://orgmode.org/worg/dev/org-syntax.html][Org mode Syntax]]
++ [[http://orgmode-cn.marboo.io/org.html][Org mode Manual(中文)]]
++ [[http://www.gnu.org/software/emacs/manual/html_node/org/][Org mode Manual(emacs)]]
++ [[https://guides.github.com/features/mastering-markdown/][GitHub Markdown]]
++ [[http://blog.csdn.net/witnessai1/article/details/52551362][Markdown 语法(中文CSDN)]]
 
