org mode syntax

--- a/org-mode/org-mode-syntax.org
+++ b/org-mode/org-mode-syntax.org
@@ -112,7 +112,9 @@
 #+END_SRC
 
 * 源代码块
-当源代码块中以 '*', ',*', '#+', ',#+' 开始, 在这些符号之前插入 ',' , 防止导出时解释为org的语法
+当源代码块中以 '*', ',*', '#+', ',#+' 开始, 
+在这些符号之前插入 ',' , 防止导出时解释为org的语法;
+(代码内容最好在开始处添加两个或四个空格缩进)
 
 #+BEGIN_SRC org
   ,#+NAME: <name>
@@ -122,5 +124,24 @@
 #+END_SRC
 
 * 待办事项
+在标题的标记后面加上 'TODO', 即变成待办事项; 
+待办事项默认只有两种状态: 'TODO' 和 'DONE';
+#+BEGIN_SRC org
+  ** TODO 待办事项一
+#+END_SRC
+通过设置TODO关键字标示事项处于工作流程中的不同状态, 
+设置里的竖线'|'划分未完结状态和以完结状态
+#+BEGIN_SRC emacs-lisp
+  (setq org-todo-keywords
+    '((sequence "TODO" "FEEDBACK" "VERIFY" "|" "DONE" "DELEGATED")))
+#+END_SRC
+
+* 标签
+每个标题可以包含多个标签; 标签放在标题的末尾位置;
+标签的前后必须被冒号包括, 比如 ':notes:'
+#+BEGIN_SRC org
+  * 标题一    :标签一:标签二:
+  ** 标题二   :tag1:tag2:
+#+END_SRC
 
 
