--- a/software-installation/jdk.org
+++ b/software-installation/jdk.org
@@ -4,7 +4,7 @@
 *** 下载JDK
 [[http://www.oracle.com/technetwork/java/javase/downloads/index.html][JDK 下载地址]]
 
-双击下载的执行文件, 安装到指定目录, 比如 'C:/java/jdk 
+双击下载的执行文件, 安装到指定目录, 比如 'C:/java/jdk'
 
 安装 JDK 的过程中, 最后会提示安装单独的 JRE, JRE 的安装可选可不选, JDK 已经自带 JRE
 
@@ -12,13 +12,13 @@
 
 #+BEGIN_EXAMPLE
   // 1. 新建 JAVA_HOME 变量(值为安装的目录)
-  JAVA_HOME C:/java/jdk
+  JAVA_HOME  C:/java/jdk
 
   // 2. 新建 CLASSPATH 变量
-  .;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar
+  CLASSPATH  .;%JAVA_HOME%\lib;%JAVA_HOME%\lib\tools.jar
 
-  // 3. 在 path 变量的值前面添加下面内容
-  %JAVA_HOME%\bin;%JAVA_HOME%\jre\bin;
+  // 3. 在 PATH 变量的值前面添加下面内容
+  PATH  %JAVA_HOME%\bin;%JAVA_HOME%\jre\bin;
 #+END_EXAMPLE
 
 
