--- a/software-installation/jdk.org
+++ b/software-installation/jdk.org
@@ -2,13 +2,15 @@
 
 ** Windows
 *** 下载JDK
+根据系统, 选择下载32位或64位的 '.exe'格式文件
 [[http://www.oracle.com/technetwork/java/javase/downloads/index.html][JDK 下载地址]]
 
+*** 安装JDK
 双击下载的执行文件, 安装到指定目录, 比如 'C:/java/jdk'
 
 安装 JDK 的过程中, 最后会提示安装单独的 JRE, JRE 的安装可选可不选, JDK 已经自带 JRE
 
-配置环境变量
+*** 配置系统环境变量
 
 #+BEGIN_EXAMPLE
   // 1. 新建 JAVA_HOME 变量(值为安装的目录)
