--- a/software-installation/jdk.org
+++ b/software-installation/jdk.org
@@ -25,3 +25,39 @@
 
 
 ** Linux
+*** 下载JDK
+根据系统选择下载32位或64位的 '.tar.gz' 格式的文件
+
+*** 安装JDK
+在命令行下转到下载的文件所在目录, 运行如下命令:
+
+#+BEGIN_SRC bash
+  # 解压文件到指定目录
+  sudo tar -zxvf jdk-8u151-linux-x64.tar.gz -C /usr/local/
+#+END_SRC
+
+*** 配置环境变量
+1. 打开配置文件
+#+BEGIN_SRC bash
+  sudo vi /etc/profile
+#+END_SRC
+
+2. 添加如下内容'
+#+BEGIN_EXAMPLE
+  # 设置 java 环境
+  export JAVA_HOME=/usr/local/jdk1.8.0_151
+  export CLASSPATH=.:$JAVA_HOME/lib:$JAVA_HOME/lib/tools.jar
+  export PATH=&JAVA_HOME/bin:$JAVA_HOME/jre/bin:$PATH
+#+END_EXAMPLE
+
+3. 重启电脑或运行 'sudo source /etc/profile' 使之生效
+
+** 测试 JDK 是否已配置好
+在命令行下输入以下几个命令:
+#+BEGIN_EXAMPLE
+  # 查看当前安装的 JDK 版本信息
+  java -version
+  
+  # 显示javac的命令帮助
+  javac
+#+END_EXAMPLE
