--- a/editor/background-color.org
+++ b/editor/background-color.org
@@ -2,25 +2,25 @@
 
 ** 背景色
 
-+ 深色的豆沙绿
+**** 深色的豆沙绿
 #+BEGIN_EXAMPLE
   16进制: #C7EDCC
   RGB值: (199, 237, 204)
 #+END_EXAMPLE
 
-+ 浅点的豆沙绿
+**** 浅点的豆沙绿
 #+BEGIN_EXAMPLE
   16进制: #CCE8CF
   RGB值: (204, 232, 207)
 #+END_EXAMPLE
 
-+ 浅黄色
+**** 浅黄色
 #+BEGIN_EXAMPLE
   16进制: #FFFFCC
   RGB值: (255, 255, 204)
 #+END_EXAMPLE
 
-+ 桃粉色
+**** 桃粉色
 #+BEGIN_EXAMPLE
   16进制: #FFDAB9
   RGB值: (255, 218, 185)
@@ -28,49 +28,49 @@
 
 ** 字体颜色
 
-+ 红色
+**** 红色
 #+BEGIN_EXAMPLE
   16进制: #CA0000
   RGB值: (202, 0, 0)
 #+END_EXAMPLE
 
-+ 红粉色
+**** 红粉色
 #+BEGIN_EXAMPLE
   16进制: #CA004B
   RGB值: (202, 0, 75)
 #+END_EXAMPLE
 
-+ 草绿色
+**** 草绿色
 #+BEGIN_EXAMPLE
   16进制: #577909
   RGB值: (87, 121, 9)
 #+END_EXAMPLE
 
-+ 绿色
+**** 绿色
 #+BEGIN_EXAMPLE
   16进制: #00AE50
   RGB值: (0, 174, 80)
 #+END_EXAMPLE
 
-+ 深黄
+**** 深黄
 #+BEGIN_EXAMPLE
   16进制: #D25400
   RGB值: (210, 84, 0)
 #+END_EXAMPLE
 
-+ 蓝色
+**** 蓝色
 #+BEGIN_EXAMPLE
   16进制: #364BC0
   RGB值: (54, 75, 192)
 #+END_EXAMPLE
 
-+ 蓝紫色
+**** 蓝紫色
 #+BEGIN_EXAMPLE
   16进制: #9B1CEB
   RGB值: (155, 28, 235)
 #+END_EXAMPLE
 
-+ 黑蓝色
+**** 黑蓝色
 #+BEGIN_EXAMPLE
   16进制: #248C85
   RGB值: (36, 140, 133)
