--- a/editor/emacs-keyboard-shortcuts.org
+++ b/editor/emacs-keyboard-shortcuts.org
@@ -1,9 +1,103 @@
 #+TITLE: Emacs 常用命令总结
 
+*** 基础说明
+| 命令 | 说明                                 |
+|------+--------------------------------------|
+| C    | CONTROL                              |
+| M    | Alt 或 META 或 EDIT                  |
+| C-x  | 字符扩展, 之后输入另一个字符或组合键 |
+| M-x  | 命令名扩展, 之后输入一个命令名       |
+
 *** 光标移动
-| 命令 | 说明             |
-|------+------------------|
-| C-p  | 向上移动一行     |
-| C-n  | 向下移动一行     |
-| C-f  | 向右移动一个字符 |
-| C-b  | 向左移动一个字符 |
+| 命令          | 说明                                 |
+|---------------+--------------------------------------|
+| C-p           | 向上移一行                           |
+| C-n           | 向下移一行                           |
+| C-f           | 向前(右)移动一个字符                 |
+| C-b           | 向后(左)移动一个字符                 |
+| C-a           | 移动到行首                           |
+| C-e           | 移动到行尾                           |
+| M-f           | 向前移动一个词                       |
+| M-b           | 向后移动一个  词                     |
+| M-e           | 移动到句尾                           |
+| M-a           | 移动到句首                           |
+| M-}           | 向前移动一个段落                     |
+| M-{           | 向后移动一个段落                     |
+| C-v           | 向前移动一屏                         |
+| M-v           | 向后移动一屏                         |
+| C-x ]         | 向前移动一页                         |
+| C-x [         | 向后移动一页                         |
+| M-<           | 移动到文件头部                       |
+| M->           | 移动到文件尾部                       |
+| C-l           | 重绘屏幕, 并将光标所在行置于屏幕中央 |
+| M-n           | 重复执行n次后续命令                  |
+| C-u n         | 重复执行n次后续命令                  |
+| M-x goto-line | 跳到指定行                           |
+| M-x goto-char | 跳到指定字符                         |
+
+*** 编辑文件
+| 命令    | 说明                                       |
+|---------+--------------------------------------------|
+| DEL     | 删除光标前面的字符                         |
+| C-d     | 删除光标位置上的字符                       |
+| M-d     | 删除光标后面的单词                         |
+| M-DEL   | 删除光标前面的单词                         |
+| C-k     | 从光标位置删除到行尾                       |
+| M-k     | 删除光标后面的句子                         |
+| C-x DEL | 删除光标前面的句子                         |
+| C-y     | 恢复被删除的文本或粘贴最近删除后复制的文本 |
+| C-w     | 删除文本块                                 |
+| C-/     | 撤销                                     |
+| C-_     | 撤销                                       |
+| C-x u   | 撤销                                       |
+| C-@     | 开始标记文本块                             |
+| C-x C-x | 互换插入点和文本标记的位置                 |
+| M-w     | 复制文本块                                 |
+| M-h     | 标记段落                                   |
+| C-x C-p | 标记页面                                   |
+| C-x h   | 标记整个缓冲区                             |
+| M-c     | 单词首字母改为大写                         |
+| M-u     | 单词的字母全部改为大写                     |
+| M-l     | 单词的字母全部改为小写                     |
+
+*** 文件和缓冲区操作
+| 命令              | 说明                         |
+|-------------------+------------------------------|
+| C-x C-f           | 打开或新建文件               |
+| C-x C-v           | 读入另一个文件替换掉当前文件 |
+| C-x i             | 把文件插入到当前光标的位置   |
+| C-x C-s           | 保存当前文件                 |
+| C-x s             | 保存缓冲区的所有文件         |
+| C-x C-w           | 另存为                       |
+| C-x C-c           | 退出 Emacs                   |
+| C-x b             | 切换缓冲区                   |
+| C-x C-b           | 列出缓冲区列表               |
+| C-x k             | 删除缓冲区                   |
+| C-x C-q           | 设置当前缓冲区为只读         |
+| M-x rename-buffer | 重命名当前缓冲区     |
+
+*** 窗口操作
+| 命令  | 说明               |
+|-------+--------------------|
+| C-x 0 | 删除当前所在的窗口 |
+| C-x 1 | 只保留当前窗口     |
+| C-x 2 | 新建纵向排列的窗口 |
+| C-x 3 | 新建横向排列的窗口 |
+| C-x o | 移动到下一个窗口   |
+
+*** 查找操作
+| 命令        | 说明                                                 |
+|-------------+------------------------------------------------------|
+| C-s         | 向前递增查找                                         |
+| C-r         | 向后递增查找                                         |
+| C-s C-w     | 开始递增查找, 把光标位置的单词做查找字符串           |
+| C-s C-y     | 开始递增查找, 把光标位置到行尾之间的文本做查找字符串 |
+| C-s RET C-w | 向前开始单词查找                                     |
+| C-r RET C-w | 向后开始单词查找                                     |
+
+*** 位置交换
+| 命令    | 说明                 |
+|---------+----------------------|
+| C-t     | 交换两个字符的位置   |
+| M-t     | 交换两个单词的位置   |
+| C-x C-t | 交换两个文本行的位置 |
