--- a/markdown/syntax.org
+++ b/markdown/syntax.org
@@ -14,6 +14,8 @@
 ** 段落
 以内容为起始, 即为一段落, 不同段落之间以一个空行分隔
 
+换行: 在行末尾加俩个空格然后输入回车
+
 ** 列表
 *** 无序列表
 无序列表以 '*' 开始, 星号与内容之间以一个空格分隔, 
@@ -33,20 +35,17 @@
 
 ** 文本样式
 *** 加粗
-以 '**'...'**' 或 '__'...'__' 表示加粗
 #+BEGIN_SRC markdown
   **加粗文本**
   __加粗文本__
 #+END_SRC
 
 *** 斜体
-以 '*'...'*' 或 '_'...'_' 表示斜体
 #+BEGIN_SRC markdown
   *斜体文本*
   _斜体文本_
 #+END_SRC
 *** 删除线
-以 '~~'...'~~' 表示删除线
 #+BEGIN_SRC markdown
   ~~删除线文本~~
 #+END_SRC
@@ -63,15 +62,38 @@
 
 ** 代码
 *** 代码块
-
+#+BEGIN_SRC markdown
+  ```language
+  source code
+  ```
+#+END_SRC
 *** 行内代码
-
+#+BEGIN_SRC markdown
+  `source code`
+#+END_SRC
 ** 块引用
-
+#+BEGIN_SRC markdown
+  > 块引用
+  > 块引用
+  >> 二级嵌套块引用
+  >> 二级嵌套块引用
+#+END_SRC
 ** 表格
-
+- ':---:' 两边有冒号的表示居中对齐
+- ':----' 左边有冒号的表示左对齐
+- '----:' 右边有冒号的表示右对齐
+#+BEGIN_SRC markdown
+  | 标题 | 标题 |
+  |:----:|:----|
+  | 内容 | 内容 |
+#+END_SRC
 ** 分隔线
-
+#+BEGIN_SRC markdown
+  ------
+#+END_SRC
 ** 脚注
+#+BEGIN_SRC markdown
+  有脚注的内容 [^1]
+  [^1]: 脚注内容
+#+END_SRC
 
-** 
