--- a/editor/emacs-keyboard-shortcuts.org
+++ b/editor/emacs-keyboard-shortcuts.org
@@ -36,29 +36,29 @@
 | M-x goto-char | 跳到指定字符                         |
 
 *** 编辑文件
-| 命令    | 说明                                       |
-|---------+--------------------------------------------|
-| DEL     | 删除光标前面的字符                         |
-| C-d     | 删除光标位置上的字符                       |
-| M-d     | 删除光标后面的单词                         |
-| M-DEL   | 删除光标前面的单词                         |
-| C-k     | 从光标位置删除到行尾                       |
-| M-k     | 删除光标后面的句子                         |
-| C-x DEL | 删除光标前面的句子                         |
-| C-y     | 恢复被删除的文本或粘贴最近删除后复制的文本 |
-| C-w     | 删除文本块                                 |
-| C-/     | 撤销                                     |
-| C-_     | 撤销                                       |
-| C-x u   | 撤销                                       |
-| C-@     | 开始标记文本块                             |
-| C-x C-x | 互换插入点和文本标记的位置                 |
-| M-w     | 复制文本块                                 |
-| M-h     | 标记段落                                   |
-| C-x C-p | 标记页面                                   |
-| C-x h   | 标记整个缓冲区                             |
-| M-c     | 单词首字母改为大写                         |
-| M-u     | 单词的字母全部改为大写                     |
-| M-l     | 单词的字母全部改为小写                     |
+| 命令       | 说明                                       |
+|------------+--------------------------------------------|
+| BACKSPACE  | 删除光标前面的字符                         |
+| C-d 或 DEL | 删除光标位置上的字符                       |
+| M-d        | 删除光标后面的单词                         |
+| M-DEL      | 删除光标前面的单词                         |
+| C-k        | 从光标位置删除到行尾                       |
+| M-k        | 删除光标后面的句子                         |
+| C-x DEL    | 删除光标前面的句子                         |
+| C-y        | 恢复被删除的文本或粘贴最近删除后复制的文本 |
+| C-w        | 删除文本块                                 |
+| C-/        | 撤销                                       |
+| C-_        | 撤销                                       |
+| C-x u      | 撤销                                       |
+| C-@        | 开始标记文本块                             |
+| C-x C-x    | 互换插入点和文本标记的位置                 |
+| M-w        | 复制文本块                                 |
+| M-h        | 标记段落                                   |
+| C-x C-p    | 标记页面                                   |
+| C-x h      | 标记整个缓冲区                             |
+| M-c        | 单词首字母改为大写                         |
+| M-u        | 单词的字母全部改为大写                     |
+| M-l        | 单词的字母全部改为小写                     |
 
 *** 文件和缓冲区操作
 | 命令              | 说明                         |
@@ -101,3 +101,10 @@
 | C-t     | 交换两个字符的位置   |
 | M-t     | 交换两个单词的位置   |
 | C-x C-t | 交换两个文本行的位置 |
+
+*** 打开mode
+| 命令         | 说明                 |
+|--------------+----------------------|
+| M+x shell    | 在 emacs 中打开shell |
+| M+x calendar | 在 emacs 中打开日历  |
+| M+x dired    | 在 emacs 中打开目录        |
