--- a/editor/emacs-keyboard-shortcuts.org
+++ b/editor/emacs-keyboard-shortcuts.org
@@ -46,12 +46,12 @@
 | M-k        | 删除光标后面的句子                         |
 | C-x DEL    | 删除光标前面的句子                         |
 | C-y        | 恢复被删除的文本或粘贴最近删除后复制的文本 |
-| C-w        | 删除文本块                                 |
 | C-/        | 撤销                                       |
 | C-_        | 撤销                                       |
 | C-x u      | 撤销                                       |
 | C-@        | 开始标记文本块                             |
 | C-x C-x    | 互换插入点和文本标记的位置                 |
+| C-w        | 删除文本块                                 |
 | M-w        | 复制文本块                                 |
 | M-h        | 标记段落                                   |
 | C-x C-p    | 标记页面                                   |
@@ -59,6 +59,7 @@
 | M-c        | 单词首字母改为大写                         |
 | M-u        | 单词的字母全部改为大写                     |
 | M-l        | 单词的字母全部改为小写                     |
+| C-q TAB    | 插入 TAB 字符                              |
 
 *** 文件和缓冲区操作
 | 命令              | 说明                         |
