--- a/notes/vim-notes.org
+++ b/notes/vim-notes.org
@@ -1,15 +1,14 @@
+#+TITLE: vim 笔记
 
-# vim 笔记
-
-## vim 常用命令
+** vim 常用命令
 
 - 'Ctrl+c' 退出编辑模式
 
+** vim 配置
+*** Vim 设置状态栏
 
-## vim 配置
+#+BEGIN_SRC vim-script
 
-
-```vim script
 "statusline 设置状态栏                                                                                                                                 
 set statusline=  
 set statusline+=%7*\[%n]                                  "buffernr  
@@ -39,16 +38,17 @@ hi User8 ctermfg=231  ctermbg=blue
 "hi User9 ctermfg=#ffffff  ctermbg=#810085  
 hi User0 ctermfg=yellow  ctermbg=138
 
+#+END_SRC
 
-```
+** Vim 的 emmet 插件
 
-
-## emmet 插件
-
-#### 安装
+**** 安装
 1. 将压缩包中的plugin/emmet.vim 文件拷贝到 vim 安装目录下的 plugin/ 文件夹
 2. 将压缩包中的autoload/ 下的 emmet.vim文件和emmet/文件夹拷贝到 vim安装目录下的 autoload/ 文件夹
 
-#### emmet常用命令
+**** emmet常用命令
+| 命令  | 说明     |
+|-------+----------|
+| C-y , | 展开标签 |
 
-- 'Ctrl+y , ' 展开
+
