--- a/notes/vim-notes.org
+++ b/notes/vim-notes.org
@@ -2,7 +2,12 @@
 
 ** vim 常用命令
 
-- 'Ctrl+c' 退出编辑模式
+| 命令 | 说明                                         |
+|------+----------------------------------------------|
+| C-c  | 退出编辑模式                                 |
+| C-[  | 退出编辑模式                                 |
+| ESC  | 退出编辑模式                                 |
+| C-o  | 临时退出编辑模式(输入一条命令后回到编辑模式) |
 
 ** vim 配置
 *** Vim 设置状态栏
@@ -11,31 +16,31 @@
 
 "statusline 设置状态栏                                                                                                                                 
 set statusline=  
-set statusline+=%7*\[%n]                                  "buffernr  
-set statusline+=%1*\ %<%F\                                "文件路径  
-set statusline+=%2*\ %y\                                  "文件类型  
-set statusline+=%3*\ %{''.(&fenc!=''?&fenc:&enc).''}      "编码1  
-set statusline+=%3*\ %{(&bomb?\",BOM\":\"\")}\            "编码2  
-set statusline+=%4*\ %{&ff}\                              "文件系统(dos/unix..)   
-set statusline+=%5*\ %{&spelllang}\%{HighlightSearch()}\  "语言 & 是否高亮，H表示高亮?  
-set statusline+=%8*\ %=\ row:%l/%L\ (%03p%%)\             "光标所在行号/总行数 (百分比)  
-set statusline+=%9*\ col:%03c\                            "光标所在列  
-set statusline+=%0*\ \ %m%r%w\ %P\ \                      "Modified? Read only? Top/bottom  
-function! HighlightSearch()  
-      if &hls  
-          return 'H'  
-      else  
-          return ''  
-      endif  
-endfunction  
-hi User1 ctermfg=white  ctermbg=darkred  
-hi User2 ctermfg=blue  ctermbg=58  
-hi User3 ctermfg=white  ctermbg=100  
-hi User4 ctermfg=darkred  ctermbg=95  
-hi User5 ctermfg=darkred  ctermbg=77  
-hi User7 ctermfg=darkred  ctermbg=blue  cterm=bold  
-hi User8 ctermfg=231  ctermbg=blue  
-"hi User9 ctermfg=#ffffff  ctermbg=#810085  
+set statusline+=%7*\[%n]                                  "buffernr
+set statusline+=%1*\ %<%F\                                "文件路径
+set statusline+=%2*\ %y\                                  "文件类型
+set statusline+=%3*\ %{''.(&fenc!=''?&fenc:&enc).''}      "编码1
+set statusline+=%3*\ %{(&bomb?\",BOM\":\"\")}\            "编码2
+set statusline+=%4*\ %{&ff}\                              "文件系统(dos/unix..)
+set statusline+=%5*\ %{&spelllang}\%{HighlightSearch()}\  "语言 & 是否高亮，H表示高亮?
+set statusline+=%8*\ %=\ row:%l/%L\ (%03p%%)\             "光标所在行号/总行数 (百分比)
+set statusline+=%9*\ col:%03c\                            "光标所在列
+set statusline+=%0*\ \ %m%r%w\ %P\ \                      "Modified? Read only? Top/bottom
+function! HighlightSearch()
+      if &hls
+          return 'H'
+      else
+          return ''
+      endif
+endfunction
+hi User1 ctermfg=white  ctermbg=darkred
+hi User2 ctermfg=blue  ctermbg=58
+hi User3 ctermfg=white  ctermbg=100
+hi User4 ctermfg=darkred  ctermbg=95
+hi User5 ctermfg=darkred  ctermbg=77
+hi User7 ctermfg=darkred  ctermbg=blue  cterm=bold
+hi User8 ctermfg=231  ctermbg=blue
+"hi User9 ctermfg=#ffffff  ctermbg=#810085
 hi User0 ctermfg=yellow  ctermbg=138
 
 #+END_SRC
