--- a/notes/tex-notes.org
+++ b/notes/tex-notes.org
@@ -3,10 +3,11 @@
 XeLaTeX
 
 ** 支持中文的方法
+以下方法需使用 XeLaTeX 编译
 - 方法一: 导入以下宏包
 #+BEGIN_EXAMPLE
   \usepackage{fontspec, xunicode, xltxtra}
-  \setmainfont{ SongTi }
+  \setmainfont{KaiTi}
 #+END_EXAMPLE
 
 - 方法二: 导入 xeCJK 宏包
@@ -19,6 +20,16 @@ XeLaTeX
   \documentclass[UTF8]{ctexart}
 #+END_EXAMPLE
 
+** 设置导出的PDF页面大小
+#+BEGIN_EXAMPLE
+  \usepackage{geometry}
+  \geometry{top=2cm, right=2cm, bottom=2cm, left=2cm}
+#+END_EXAMPLE
+
 ** 编辑器
 - TeXstudio
 - Emacs + AUCTeX插件
+
+** LaTex 发行版
+- MikTeX
+- TeX Live
