--- a/editor/emacs-keyboard-shortcuts.org
+++ b/editor/emacs-keyboard-shortcuts.org
@@ -36,30 +36,30 @@
 | M-x goto-char | 跳到指定字符                         |
 
 *** 编辑文件
-| 命令       | 说明                                       |
-|------------+--------------------------------------------|
-| BACKSPACE  | 删除光标前面的字符                         |
-| C-d 或 DEL | 删除光标位置上的字符                       |
-| M-d        | 删除光标后面的单词                         |
-| M-DEL      | 删除光标前面的单词                         |
-| C-k        | 从光标位置删除到行尾                       |
-| M-k        | 删除光标后面的句子                         |
-| C-x DEL    | 删除光标前面的句子                         |
-| C-y        | 恢复被删除的文本或粘贴最近删除后复制的文本 |
-| C-/        | 撤销                                       |
-| C-_        | 撤销                                       |
-| C-x u      | 撤销                                       |
-| C-@        | 开始标记文本块                             |
-| C-x C-x    | 互换插入点和文本标记的位置                 |
-| C-w        | 删除文本块                                 |
-| M-w        | 复制文本块                                 |
-| M-h        | 标记段落                                   |
-| C-x C-p    | 标记页面                                   |
-| C-x h      | 标记整个缓冲区                             |
-| M-c        | 单词首字母改为大写                         |
-| M-u        | 单词的字母全部改为大写                     |
-| M-l        | 单词的字母全部改为小写                     |
-| C-q TAB    | 插入 TAB 字符                              |
+| 命令          | 说明                                       |
+|---------------+--------------------------------------------|
+| BACKSPACE     | 删除光标前面的字符                         |
+| C-d 或 DEL    | 删除光标位置上的字符                       |
+| M-d           | 删除光标后面的单词                         |
+| M-BACKSPACE   | 删除光标前面的单词                         |
+| C-k           | 从光标位置删除到行尾                       |
+| M-k           | 删除光标后面的句子                         |
+| C-x BACKSPACE | 删除光标前面的句子                         |
+| C-y           | 恢复被删除的文本或粘贴最近删除后复制的文本 |
+| C-/           | 撤销                                       |
+| C-_           | 撤销                                       |
+| C-x u         | 撤销                                       |
+| C-@           | 开始标记文本块                             |
+| C-x C-x       | 互换插入点和文本标记的位置                 |
+| C-w           | 删除文本块                                 |
+| M-w           | 复制文本块                                 |
+| M-h           | 标记段落                                   |
+| C-x C-p       | 标记页面                                   |
+| C-x h         | 标记整个缓冲区                             |
+| M-c           | 单词首字母改为大写                         |
+| M-u           | 单词的字母全部改为大写                     |
+| M-l           | 单词的字母全部改为小写                     |
+| C-q TAB       | 插入 TAB 字符                              |
 
 *** 文件和缓冲区操作
 | 命令              | 说明                         |
@@ -75,16 +75,26 @@
 | C-x C-b           | 列出缓冲区列表               |
 | C-x k             | 删除缓冲区                   |
 | C-x C-q           | 设置当前缓冲区为只读         |
-| M-x rename-buffer | 重命名当前缓冲区     |
+| M-x rename-buffer | 重命名当前缓冲区             |
 
 *** 窗口操作
-| 命令  | 说明               |
-|-------+--------------------|
-| C-x 0 | 删除当前所在的窗口 |
-| C-x 1 | 只保留当前窗口     |
-| C-x 2 | 新建纵向排列的窗口 |
-| C-x 3 | 新建横向排列的窗口 |
-| C-x o | 移动到下一个窗口   |
+| 命令      | 说明                             |
+|-----------+----------------------------------|
+| C-x 0     | 关闭当前所在的窗口               |
+| C-x 1     | 只保留当前窗口                   |
+| C-x 2     | 新建纵向排列的窗口               |
+| C-x 3     | 新建横向排列的窗口               |
+| C-x o     | 移动到下一个窗口                 |
+| C-M-v     | 滚动下一个窗口                   |
+| C-x 4 b   | 在另一个窗口打开Buffer           |
+| C-x 4 C-o | 在另一个窗口打开Buffer, 但不选中 |
+| C-x 4 f   | 在另一个窗口打开文件             |
+| C-x 4 d   | 在另一个窗口打开文件夹           |
+| C-x 4 0   | 关闭当前窗口和缓冲               |
+| C-x ^     | 增大当前窗口高度                 |
+| C-x {     | 减小当前窗口的宽度               |
+| C-x }     | 增加当前窗口的宽度               |
+| C-x +     | 所有窗口一样高                   |
 
 *** 查找操作
 | 命令        | 说明                                                 |
