--- a/editor/index.org
+++ b/editor/index.org
@@ -5,7 +5,8 @@
 + [[./background-color.org][编辑器颜色设置]]
 
 ** 编辑器字体
-+ [[./editor-fonts.org][编辑器常用字体]
++ [[./editor-fonts.org][编辑器常用字体]]
+
 ** 注册激活
 + [[./registration-code.org][编辑器注册激活]]
 
